
AC_PREREQ(2.59)
AC_INIT([mpprof], [1.0], [dakkak@illinois.edu])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])

# Will build a shared library
LT_INIT
AC_PROG_LIBTOOL
AC_ENABLE_SHARED

# Use C and C++
AC_PROG_CC
AC_PROG_CXX

AC_CONFIG_MACRO_DIR([m4])

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

